Fix sidebar list item spacing for long topic names

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -10,13 +10,9 @@
   font-size: 14px;
 
   li {
-    height: 20px;
     font-size: 12px;
     color: #666666;
-
-    a {
-      margin-bottom: 5px;
-    }
+    margin-bottom: 10px;
 
     a:hover {
       text-decoration: none;
